[tool.poetry]
name = "code-prob-ml"
version = "0.1.0"
description = ""
authors = ["Lars Selstad <l.selstad@gmail.com>"]
readme = "README.md"
packages = [{include = "code_prob_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
jax = "^0.4.20"
jaxlib = "^0.4.20"
torch = "^2.1.1"
ipython = "^8.18.1"
requests = "^2.31.0"
tinygp = "^0.2.4"
jaxopt = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
